# agentic_sales_copilot

./: .env.example  .gitignore  Dockerfile  ELK_README.md  Makefile  README.md  docker-compose.yml  logging.ini  prospects.csv  pyproject.toml  webhook_server.py
app/: celery_instrumentation.py  config.py  database.py  email_utils.py  logging_config.py  main.py  middleware.py  prompt_loader.py  reply_agent.py  slack_notifier.py  tasks.py  tools.py  utils.py
app/prompts/: busy_sales_agent.txt  email_selector.txt  engaging_sales_agent.txt  personalized_writer_instructions.txt  professional_sales_agent.txt  research_agent_instructions.txt  sales_manager.txt  sdr_instructions.txt
docs/: observability.md
elasticsearch/: index-template.json
filebeat/: Dockerfile  filebeat.yml
logstash/: logstash.yml
logstash/pipeline/: logstash.conf
